RESOLVED FIXED140142
Only throttle DOM timers if they change CSS properties that cannot cause non-descendant elements to become visible
https://bugs.webkit.org/show_bug.cgi?id=140142
Summary Only throttle DOM timers if they change CSS properties that cannot cause non-...
Chris Dumez
Reported 2015-01-06 13:02:42 PST
Only throttle DOM timers if they change CSS properties that cannot cause non-descendant elements to become visible. For example, a DOM timer may change the height of an element that is outside the viewport. However, changing its height may causes elements inside the viewport to move. As such, we should NOT throttle such DOM timer.
Attachments
Patch (8.65 KB, patch)
2015-01-06 13:49 PST, Chris Dumez
no flags
Patch (1.39 KB, patch)
2015-01-13 16:48 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-01-06 13:49:40 PST
WebKit Commit Bot
Comment 2 2015-01-06 18:08:24 PST
Comment on attachment 244093 [details] Patch Clearing flags on attachment: 244093 Committed r178014: <http://trac.webkit.org/changeset/178014>
WebKit Commit Bot
Comment 3 2015-01-06 18:08:30 PST
All reviewed patches have been landed. Closing bug.
Daniel Bates
Comment 4 2015-01-13 16:45:49 PST
Comment on attachment 244093 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=244093&action=review > LayoutTests/fast/dom/timer-height-change-no-throttling.html:31 > + setTimeout(scrollElementIntoView, 0); Did you mean to include this line? If so, scrollElementIntoView needs to be defined.
Chris Dumez
Comment 5 2015-01-13 16:46:46 PST
Comment on attachment 244093 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=244093&action=review >> LayoutTests/fast/dom/timer-height-change-no-throttling.html:31 >> + setTimeout(scrollElementIntoView, 0); > > Did you mean to include this line? If so, scrollElementIntoView needs to be defined. No, this line needs to go away.
Chris Dumez
Comment 6 2015-01-13 16:48:35 PST
Reopening to attach new patch.
Chris Dumez
Comment 7 2015-01-13 16:48:38 PST
WebKit Commit Bot
Comment 8 2015-01-13 19:35:47 PST
Comment on attachment 244563 [details] Patch Clearing flags on attachment: 244563 Committed r178403: <http://trac.webkit.org/changeset/178403>
WebKit Commit Bot
Comment 9 2015-01-13 19:35:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.