Source/WebCore/bindings/js/JSCSSStyleDeclarationCustom.cpp
@@ -320,6 +320,23 @@ bool JSCSSStyleDeclaration::getOwnPropertySlotDelegate(ExecState* exec, Property
     return true;
 }
 
+// We only throttle DOM timers if they animate CSS properties that will only
+// cause the current element (or its descendants) to be repainted.
+static inline bool propertyChangeMayRepaintNonDescendants(CSSPropertyID propertyID)
+{
+    switch (propertyID) {
+    case CSSPropertyBottom:
+    case CSSPropertyLeft:
+    case CSSPropertyOpacity:
+    case CSSPropertyRight:
+    case CSSPropertyTop:
+    case CSSPropertyWebkitTransform:
+        return false;
+    default:
+        return true;
+    }
+}
+
 bool JSCSSStyleDeclaration::putDelegate(ExecState* exec, PropertyName propertyName, JSValue value, PutPropertySlot&)
 {
     CSSPropertyInfo propertyInfo = cssPropertyIDForJSCSSPropertyName(propertyName);
@@ -340,12 +357,13 @@ bool JSCSSStyleDeclaration::putDelegate(ExecState* exec, PropertyName propertyNa
     }
 
     ExceptionCode ec = 0;
-    bool changed = impl().setPropertyInternal(static_cast<CSSPropertyID>(propertyInfo.propertyID), propValue, important, ec);
+    CSSPropertyID propertyID = static_cast<CSSPropertyID>(propertyInfo.propertyID);
+    impl().setPropertyInternal(propertyID, propValue, important, ec);
     setDOMException(exec, ec);
 
     // Choke point for interaction with style of element; notify DOMTimer of the event.
     if (auto* element = impl().parentElement())
-        DOMTimer::scriptDidCauseElementRepaint(*element, changed);
+        DOMTimer::scriptDidCauseElementRepaint(*element, propertyChangeMayRepaintNonDescendants(propertyID));
 
     return true;
 }
